--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
 
     // 캘린더 LocalDate.now() 사용하려고 추가함
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
+
+    // 데이터베이스 데이터 확인
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
