--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,20 +30,27 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //상단,하단 바 만들기
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.4.0'
 
     // 캘린더 LocalDate.now() 사용하려고 추가함
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 
+
     // 데이터베이스 데이터 확인
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
+    // 데이터베이스 실시간 확인용
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+
+    // 빌드오류해결용
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
 }
